blocked task cannot be taken

--- a/.github/workflows/on-first-comment.yml
+++ b/.github/workflows/on-first-comment.yml
@@ -23,8 +23,71 @@ jobs:
             });
             return comments.data.length === 1;
 
-      - name: Assign user who commented
+      - name: Check if issue is not Blocked
+        id: status-check
         if: steps.first-comment.outputs.result == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          script: |
+            const issueNodeId = context.payload.issue.node_id;
+            const projectNumber = 3;
+            const userLogin = "tsenturion";
+
+            const result = await github.graphql(`
+              query($userLogin: String!, $projectNumber: Int!) {
+                user(login: $userLogin) {
+                  projectV2(number: $projectNumber) {
+                    items(first: 100) {
+                      nodes {
+                        id
+                        content {
+                          ... on Issue {
+                            id
+                          }
+                        }
+                        fieldValues(first: 20) {
+                          nodes {
+                            ... on ProjectV2ItemFieldValue {
+                              field {
+                                ... on ProjectV2FieldCommon {
+                                  name
+                                }
+                              }
+                              ... on ProjectV2ItemFieldSingleSelectValue {
+                                value
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            `, { userLogin, projectNumber });
+
+            const items = result.user.projectV2.items.nodes;
+            const item = items.find(i => i.content?.id === issueNodeId);
+            if (!item) {
+              core.setFailed("Issue not found in project.");
+              return;
+            }
+
+            const statusField = item.fieldValues.nodes.find(fv => fv.field?.name === "Status");
+
+            if (!statusField || !statusField.value) {
+              core.setFailed("Status not set for this issue.");
+              return;
+            }
+
+            if (statusField.value === "Blocked") {
+              core.setFailed("This issue is Blocked and cannot be assigned.");
+              return;
+            }
+
+      - name: Assign user who commented
+        if: steps.first-comment.outputs.result == 'true' && !failure() && steps.status-check.outcome == 'success'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GH_TOKEN }}
@@ -41,7 +104,7 @@ jobs:
   
       - name: Get project item ID
         id: get-item
-        if: steps.first-comment.outputs.result == 'true'
+        if: steps.first-comment.outputs.result == 'true' && !failure() && steps.status-check.outcome == 'success'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GH_TOKEN }}
@@ -113,7 +176,7 @@ jobs:
 
 
       - name: Set status to In Progress
-        if: steps.first-comment.outputs.result == 'true'
+        if: steps.first-comment.outputs.result == 'true' && !failure() && steps.status-check.outcome == 'success'
         uses: actions/github-script@v7
         env:
           PROJECT_DATA: ${{ steps.get-item.outputs.projectData }}
