--- a/.github/workflows/on-first-comment.yml
+++ b/.github/workflows/on-first-comment.yml
@@ -48,15 +48,14 @@ jobs:
                         }
                         fieldValues(first: 20) {
                           nodes {
-                            ... on ProjectV2ItemFieldValue {
+                            ... on ProjectV2ItemFieldSingleSelectValue {
                               field {
                                 ... on ProjectV2FieldCommon {
                                   name
                                 }
                               }
-                              ... on ProjectV2ItemFieldSingleSelectValue {
-                                value
-                              }
+                              optionId
+                              optionName: name
                             }
                           }
                         }
