--- a/.github/workflows/on-first-comment.yml
+++ b/.github/workflows/on-first-comment.yml
@@ -23,84 +23,9 @@ jobs:
             });
             return comments.data.length === 1;
 
-      - name: Check if issue is not Blocked
-        id: status-check
-        if: steps.first-comment.outputs.result == 'true'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GH_TOKEN }}
-          script: |
-            const issueNodeId = context.payload.issue.node_id;
-            const projectNumber = 3;
-            const userLogin = "tsenturion";
-
-            const result = await github.graphql(`
-              query($userLogin: String!, $projectNumber: Int!) {
-                user(login: $userLogin) {
-                  projectV2(number: $projectNumber) {
-                    items(first: 100) {
-                      nodes {
-                        id
-                        content {
-                          ... on Issue {
-                            id
-                          }
-                        }
-                        fieldValues(first: 20) {
-                          nodes {
-                            ... on ProjectV2ItemFieldSingleSelectValue {
-                              field {
-                                ... on ProjectV2FieldCommon {
-                                  name
-                                }
-                              }
-                              name
-                            }
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            `, { userLogin, projectNumber });
-
-            const items = result.user.projectV2.items.nodes;
-            const item = items.find(i => i.content?.id === issueNodeId);
-            if (!item) {
-              core.setFailed("Issue not found in project.");
-              return;
-            }
-
-            const statusField = item.fieldValues.nodes.find(fv => fv.field?.name === "Status");
-
-            const currentStatus = statusField?.name ?? "Unspecified";
-            console.log(`Current issue status: ${currentStatus}`);
-
-            if (currentStatus === "Blocked") {
-              core.setFailed("This issue is Blocked and cannot be assigned.");
-              return;
-            }
-
-      - name: Assign user who commented
-        if: steps.first-comment.outputs.result == 'true' && !failure() && steps.status-check.outcome == 'success'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GH_TOKEN }}
-          script: |
-            const issue_number = context.payload.issue.number;
-            const user = context.payload.comment.user.login;
-
-            await github.rest.issues.addAssignees({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number,
-              assignees: [user],
-            });
-  
-      - name: Get project item ID
+      - name: Get project data and check if Blocked
         id: get-item
-        if: steps.first-comment.outputs.result == 'true' && !failure() && steps.status-check.outcome == 'success'
+        if: steps.first-comment.outputs.result == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GH_TOKEN }}
@@ -136,6 +61,18 @@ jobs:
                             id
                           }
                         }
+                        fieldValues(first: 20) {
+                          nodes {
+                            ... on ProjectV2ItemFieldSingleSelectValue {
+                              field {
+                                ... on ProjectV2FieldCommon {
+                                  name
+                                }
+                              }
+                              name
+                            }
+                          }
+                        }
                       }
                     }
                   }
@@ -148,6 +85,15 @@ jobs:
             const item = project.items.nodes.find(n => n.content?.id === issueNodeId);
             if (!item) {
               core.setFailed("Issue not found in project.");
+              return;
+            }
+
+            const statusValue = item.fieldValues.nodes.find(fv => fv.field?.name === "Status");
+            const currentStatus = statusValue?.name ?? "Unspecified";
+            console.log(`Current issue status: ${currentStatus}`);
+
+            if (currentStatus === "Blocked") {
+              core.setFailed("This issue is Blocked and cannot be assigned.");
               return;
             }
 
@@ -170,9 +116,24 @@ jobs:
               optionId: inProgressOption.id
             }));
 
+      - name: Assign user who commented
+        if: steps.first-comment.outputs.result == 'true' && steps.get-item.outcome == 'success'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          script: |
+            const issue_number = context.payload.issue.number;
+            const user = context.payload.comment.user.login;
+
+            await github.rest.issues.addAssignees({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number,
+              assignees: [user],
+            });
 
       - name: Set status to In Progress
-        if: steps.first-comment.outputs.result == 'true' && !failure() && steps.status-check.outcome == 'success'
+        if: steps.first-comment.outputs.result == 'true' && steps.get-item.outcome == 'success'
         uses: actions/github-script@v7
         env:
           PROJECT_DATA: ${{ steps.get-item.outputs.projectData }}
