--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -35,7 +35,7 @@ jobs:
             issue_number=$(echo "$issue_url" | grep -o '[0-9]\+
 
       - name: Extract issue info
-        id: extract
+        id: extract_info
         run: |
           mapfile -t numbers < issue_numbers.txt
           echo "issue1_number=${numbers[0]}" >> $GITHUB_OUTPUT
@@ -98,9 +98,9 @@ jobs:
             fi
           }
 
-          issue1=${{ steps.extract.outputs.issue1_number }}
-          issue2=${{ steps.extract.outputs.issue2_number }}
-          issue3=${{ steps.extract.outputs.issue3_number }}
+          issue1=${{ steps.extract_info.outputs.issue1_number }}
+          issue2=${{ steps.extract_info.outputs.issue2_number }}
+          issue3=${{ steps.extract_info.outputs.issue3_number }}
 
           validate_issue "$issue1" "tsenturion" "In Progress" "Issue No Status"
           validate_issue "$issue2" "tsenturion" "In Progress" "Issue Todo"
@@ -143,7 +143,20 @@ jobs:
             fi
           done
 
-          echo "✅ No changes after second comment")
+          echo "✅ No changes after second comment"
+
+      - name: Cleanup - Delete test issues
+        if: always()
+        run: |
+          echo "🧹 Cleaning up test issues..."
+          if [[ -f issue_numbers.txt ]]; then
+            for num in $(cat issue_numbers.txt); do
+              echo "Deleting issue #$num"
+              gh issue delete "$num" --yes || echo "Failed to delete issue #$num (might already be deleted)"
+            done
+          else
+            echo "No issues to clean up"
+          fi)
             
             echo "$issue_number" >> issue_numbers.txt
             
