--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -148,16 +148,16 @@ jobs:
       - name: Cleanup - Delete test issues
         if: always()
         run: |
-          echo "🧹 Cleaning up test issues..."
-          if [[ -f issue_numbers.txt ]]; then
-            while IFS= read -r num; do
-              if [[ -n "$num" ]]; then
-                echo "Deleting issue #$num"
-                gh issue delete "$num" --yes || echo "Failed to delete issue #$num (might already be deleted)"
+          echo "Cleaning up test issues..."
+          if [ -f issue_numbers.txt ]; then
+            cat issue_numbers.txt | while read -r issue_num; do
+              if [ -n "$issue_num" ]; then
+                echo "Deleting issue #$issue_num"
+                gh issue delete "$issue_num" --yes || true
               fi
-            done < issue_numbers.txt
+            done
           else
-            echo "No issues to clean up"
+            echo "No issue_numbers.txt file found"
           fi)
             
             echo "$issue_number" >> issue_numbers.txt
